- moved sim.ico and sim.rc to sim/ for mingw compile - updated VC6 and VC8 project

--- a/trunk/sim/sim.vcproj
+++ b/trunk/sim/sim.vcproj
@@ -2227,28 +2227,12 @@
 			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe"
 			>
 			<File
-				RelativePath="icq.ico"
+				RelativePath=".\sim\icq.ico"
 				>
 			</File>
 			<File
-				RelativePath="sim.rc"
+				RelativePath=".\sim\sim.rc"
 				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCResourceCompilerTool"
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCResourceCompilerTool"
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
 			</File>
 		</Filter>
 		<File
