--- a/trunk/sim/plugins/_core/_core.vcproj
+++ b/trunk/sim/plugins/_core/_core.vcproj
@@ -79,7 +79,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="..\..\Release\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib User32.Lib AdvAPI32.Lib $(QTDIR)\lib\$(QTLIB)"
+				AdditionalDependencies="$(OutDir)\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib User32.Lib AdvAPI32.Lib $(QTDIR)\lib\$(QTLIB)"
 				OutputFile="../../Release/plugins/_core.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -178,7 +178,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="..\..\Release\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib User32.Lib AdvAPI32.Lib $(QTDIR)\lib\$(QTLIB)"
+				AdditionalDependencies="$(OutDir)\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib User32.Lib AdvAPI32.Lib $(QTDIR)\lib\$(QTLIB)"
 				OutputFile="../../Debug/plugins/_core.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -6560,7 +6560,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6569,7 +6569,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
