--- a/trunk/sim/plugins/jabber/jabber.vcproj
+++ b/trunk/sim/plugins/jabber/jabber.vcproj
@@ -79,7 +79,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="..\..\Debug\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib $(QTDIR)\lib\$(QTLIB) $(OPENSSL_DIR)\lib\ssleay32.lib"
+				AdditionalDependencies="$(OutDir)\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib $(QTDIR)\lib\$(QTLIB) $(OPENSSL_DIR)\lib\ssleay32.lib"
 				OutputFile="../../Debug/plugins/jabber.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -180,7 +180,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="..\..\Release\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib $(QTDIR)\lib\$(QTLIB) $(OPENSSL_DIR)\lib\ssleay32.lib"
+				AdditionalDependencies="$(OutDir)\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib $(QTDIR)\lib\$(QTLIB) $(OPENSSL_DIR)\lib\ssleay32.lib"
 				OutputFile="../../Release/plugins/jabber.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
