--- a/trunk/sim/plugins/msn/msn.vcproj
+++ b/trunk/sim/plugins/msn/msn.vcproj
@@ -79,7 +79,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="..\..\Release\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib $(QTDIR)\lib\$(QTLIB)"
+				AdditionalDependencies="$(OutDir)\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib $(QTDIR)\lib\$(QTLIB)"
 				OutputFile="../../Release/plugins/msn.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -178,7 +178,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="..\..\Debug\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib $(QTDIR)\lib\$(QTLIB)"
+				AdditionalDependencies="$(OutDir)\sim.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib $(QTDIR)\lib\$(QTLIB)"
 				OutputFile="../../Debug/plugins/msn.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
