--- a/trunk/sim/plugins/osd/osd.vcproj
+++ b/trunk/sim/plugins/osd/osd.vcproj
@@ -79,7 +79,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="odbc32.lib odbccp32.lib wsock32.lib winmm.lib User32.Lib $(QTDIR)\lib\$(QTLIB) ..\..\Release\sim.lib"
+				AdditionalDependencies="odbc32.lib odbccp32.lib wsock32.lib winmm.lib User32.Lib $(QTDIR)\lib\$(QTLIB) $(OutDir)\sim.lib"
 				OutputFile="../../Debug/plugins/osd.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -180,7 +180,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="odbc32.lib odbccp32.lib wsock32.lib winmm.lib User32.Lib $(QTDIR)\lib\$(QTLIB) ..\..\Release\sim.lib"
+				AdditionalDependencies="odbc32.lib odbccp32.lib wsock32.lib winmm.lib User32.Lib $(QTDIR)\lib\$(QTLIB) $(OutDir)\sim.lib"
 				OutputFile="../../Release/plugins/osd.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
