--- a/trunk/sim/plugins/__homedir/__homedir.vcproj
+++ b/trunk/sim/plugins/__homedir/__homedir.vcproj
@@ -16,8 +16,8 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\..\..\Release"
-			IntermediateDirectory=".\..\..\Release_Wrk"
+			OutputDirectory="..\..\Release\plugins"
+			IntermediateDirectory="..\..\Release_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -78,7 +78,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="odbc32.lib odbccp32.lib AdvAPI32.Lib $(QTDIR)\lib\$(QTLIB) $(OutDir)\sim.lib"
+				AdditionalDependencies="odbc32.lib odbccp32.lib AdvAPI32.Lib $(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib"
 				OutputFile=".\..\..\Release\plugins/__homedir.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -114,8 +114,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\..\..\Debug"
-			IntermediateDirectory=".\..\..\Debug_Wrk"
+			OutputDirectory="..\..\Debug\plugins"
+			IntermediateDirectory="..\..\Debug_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -177,7 +177,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="odbc32.lib odbccp32.lib AdvAPI32.Lib $(QTDIR)\lib\$(QTLIB) $(OutDir)\sim.lib"
+				AdditionalDependencies="odbc32.lib odbccp32.lib AdvAPI32.Lib $(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib"
 				OutputFile=".\..\..\Debug\plugins/__homedir.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
