--- a/trunk/sim/plugins/remote/simctrl.vcproj
+++ b/trunk/sim/plugins/remote/simctrl.vcproj
@@ -16,8 +16,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\..\..\Debug"
-			IntermediateDirectory=".\..\..\Debug_Wrk"
+			OutputDirectory="..\..\Debug"
+			IntermediateDirectory="..\..\Debug_Wrk"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -111,8 +111,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\..\..\Release"
-			IntermediateDirectory=".\..\..\Release_Wrk"
+			OutputDirectory="..\..\Release"
+			IntermediateDirectory="..\..\Release_Wrk"
 			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
