--- a/trunk/sim/plugins/remote/simremote.vcproj
+++ b/trunk/sim/plugins/remote/simremote.vcproj
@@ -17,8 +17,8 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\../../Release"
-			IntermediateDirectory=".\../../Release_Wrk"
+			OutputDirectory="..\..\Release"
+			IntermediateDirectory="..\..\Release_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -74,7 +74,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="odbc32.lib odbccp32.lib $(QTDIR)\lib\$(QTLIB)"
+				AdditionalDependencies="odbc32.lib odbccp32.lib"
 				OutputFile=".\../../Release/simremote.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -113,8 +113,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\../../Debug"
-			IntermediateDirectory=".\../../Debug_Wrk"
+			OutputDirectory="..\..\Debug"
+			IntermediateDirectory="..\..\Debug_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -170,7 +170,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="odbc32.lib odbccp32.lib $(QTDIR)\lib\$(QTLIB)"
+				AdditionalDependencies="odbc32.lib odbccp32.lib"
 				OutputFile=".\../../Debug/simremote.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
