--- a/trunk/sim/plugins/styles/metal/metal.vcproj
+++ b/trunk/sim/plugins/styles/metal/metal.vcproj
@@ -16,8 +16,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\..\Debug\plugins\styles"
-			IntermediateDirectory=".\..\Debug_Wrk"
+			OutputDirectory="..\..\..\Debug\plugins\styles"
+			IntermediateDirectory="..\..\..\Debug_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -77,7 +77,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) imm32.lib wsock32.lib winmm.lib"
+				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib imm32.lib wsock32.lib winmm.lib"
 				OutputFile="..\..\..\Debug\plugins\styles/metal.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -115,8 +115,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\..\Release_Wrk\plugins\style"
-			IntermediateDirectory=".\..\Release_Wrk"
+			OutputDirectory="..\..\..\Release\plugins\styles"
+			IntermediateDirectory="..\..\..\Release_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -176,7 +176,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
-				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) imm32.lib wsock32.lib winmm.lib"
+				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib imm32.lib wsock32.lib winmm.lib"
 				OutputFile="../../../Release/plugins/styles/metal.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
