--- a/trunk/sim/plugins/about/about.vcproj
+++ b/trunk/sim/plugins/about/about.vcproj
@@ -16,7 +16,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="..\..\Debug\plugins"
+			OutputDirectory="..\..\Debug"
 			IntermediateDirectory="..\..\Debug_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
