--- a/trunk/sim/plugins/styles/wood/wood.vcproj
+++ b/trunk/sim/plugins/styles/wood/wood.vcproj
@@ -16,7 +16,7 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="..\..\..\Release\plugins\styles"
+			OutputDirectory="..\..\..\Release"
 			IntermediateDirectory="..\..\..\Release_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
@@ -113,7 +113,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="..\..\..\Debug\plugins\styles"
+			OutputDirectory="..\..\..\Debug"
 			IntermediateDirectory="..\..\..\Debug_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
