--- a/trunk/sim/plugins/update/update.vcproj
+++ b/trunk/sim/plugins/update/update.vcproj
@@ -16,7 +16,7 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="..\..\Release\plugins"
+			OutputDirectory="..\..\Release"
 			IntermediateDirectory="..\..\Release_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
@@ -115,7 +115,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="..\..\Debug\plugins"
+			OutputDirectory="..\..\Debug"
 			IntermediateDirectory="..\..\Debug_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
