--- a/trunk/sim/xpstyle/xpstyle.vcproj
+++ b/trunk/sim/xpstyle/xpstyle.vcproj
@@ -16,7 +16,7 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="..\Release\plugins\styles"
+			OutputDirectory="..\Release"
 			IntermediateDirectory="..\Release_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
@@ -79,7 +79,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				AdditionalDependencies="imm32.lib wsock32.lib winmm.lib User32.Lib Gdi32.Lib uxtheme.lib $(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib"
-				OutputFile="../Release/plugins/styles/xpstyle.dll"
+				OutputFile="..\Release\plugins\styles\xpstyle.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				ImportLibrary=".\..\Release_Wrk\plugins\style/xpstyle.lib"
@@ -114,7 +114,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="..\Debug\plugins\styles"
+			OutputDirectory="..\Debug"
 			IntermediateDirectory="..\Debug_Wrk"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
@@ -178,7 +178,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				AdditionalDependencies="imm32.lib wsock32.lib winmm.lib User32.Lib Gdi32.Lib uxtheme.lib $(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib"
-				OutputFile=".\..\Debug\plugins\styles/xpstyle.dll"
+				OutputFile=".\..\Debug\plugins\styles\xpstyle.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
