Fix spell plugin compilation under Mingw/Msys

--- a/trunk/sim/plugins/spell/Makefile.am
+++ b/trunk/sim/plugins/spell/Makefile.am
@@ -5,12 +5,17 @@ spell_la_SOURCES = \
   spellcfg.cpp \
   spellcfgbase.ui \
   speller.cpp \
-  spellhighlight.cpp
+  spellhighlight.cpp \
+  spellfindbase.ui
+	
+EXTRA_spell_la_SOURCES =\
+  spellfind.cpp
 
 INCLUDES=-I$(srcdir)/../../sim -I../_core -I$(srcdir)/../_core $(all_includes)
 
 spell_la_METASOURCES = AUTO
-spell_la_LIBADD = ../../sim/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS) $(LIB_ASPELL)
+spell_la_LIBADD = $(SPELL_OBJ) ../../sim/libsim.la   $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS) $(LIB_ASPELL)
+spell_la_DEPENDENCIES =  $(SPELL_OBJ)
 spell_la_LDFLAGS = -module -no-undefined -avoid-version -L../../sim/.libs $(QT_LDFLAGS) $(KDE_RPATH) $(all_libraries)
 
 
