using own debug (wrk) directory for each plugin fix warning in jmorecfg.h

--- a/trunk/sim/plugins/icq/icq.vcproj
+++ b/trunk/sim/plugins/icq/icq.vcproj
@@ -57,7 +57,7 @@
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="icq_pch.h"
-				AssemblerListingLocation=".\..\..\Release_Wrk/"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
 				ObjectFile="Debug/"
 				ProgramDataBaseFileName="Debug/"
 				BrowseInformation="1"
@@ -157,9 +157,9 @@
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="icq_pch.h"
-				AssemblerListingLocation=".\..\..\Debug_Wrk/"
-				ObjectFile=".\..\..\Debug_Wrk/"
-				ProgramDataBaseFileName=".\..\..\Debug_Wrk/"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
+				ObjectFile=".\$(ConfigurationName)/"
+				ProgramDataBaseFileName=".\$(ConfigurationName)/"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
