--- a/trunk/sim/plugins/weather/weather.vcproj
+++ b/trunk/sim/plugins/weather/weather.vcproj
@@ -17,7 +17,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="..\..\Debug"
-			IntermediateDirectory="..\..\Debug_Wrk"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -54,10 +54,10 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				PrecompiledHeaderFile=".\..\..\Debug_Wrk/weather.pch"
-				AssemblerListingLocation=".\..\..\Debug_Wrk/"
-				ObjectFile=".\..\..\Debug_Wrk/"
-				ProgramDataBaseFileName=".\..\..\Debug_Wrk/"
+				PrecompiledHeaderFile=".\$(ConfigurationName)/weather.pch"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
+				ObjectFile=".\$(ConfigurationName)/"
+				ProgramDataBaseFileName=".\$(ConfigurationName)/"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
@@ -118,7 +118,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="..\..\Release"
-			IntermediateDirectory="..\..\Release_Wrk"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -156,8 +156,8 @@
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\..\..\Release_Wrk/weather.pch"
-				AssemblerListingLocation=".\..\..\Release_Wrk/"
+				PrecompiledHeaderFile=".\$(ConfigurationName)/weather.pch"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
 				ObjectFile="Debug/"
 				ProgramDataBaseFileName="Debug/"
 				BrowseInformation="1"
