--- a/trunk/sim/plugins/__migrate/__migrate.vcproj
+++ b/trunk/sim/plugins/__migrate/__migrate.vcproj
@@ -17,7 +17,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="..\..\Release\plugins"
-			IntermediateDirectory="..\..\Release_Wrk"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -55,8 +55,8 @@
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\..\..\Release_Wrk/__migrate.pch"
-				AssemblerListingLocation=".\..\..\Release_Wrk/"
+				PrecompiledHeaderFile=".\$(ConfigurationName)/__migrate.pch"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
 				ObjectFile="Debug/"
 				ProgramDataBaseFileName="Debug/"
 				BrowseInformation="1"
@@ -117,7 +117,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="..\..\Debug"
-			IntermediateDirectory="..\..\Debug_Wrk"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -154,10 +154,10 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				PrecompiledHeaderFile=".\..\..\Debug_Wrk/__migrate.pch"
-				AssemblerListingLocation=".\..\..\Debug_Wrk/"
-				ObjectFile=".\..\..\Debug_Wrk/"
-				ProgramDataBaseFileName=".\..\..\Debug_Wrk/"
+				PrecompiledHeaderFile=".\$(ConfigurationName)/__migrate.pch"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
+				ObjectFile=".\$(ConfigurationName)/"
+				ProgramDataBaseFileName=".\$(ConfigurationName)/"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
