--- a/trunk/sim/plugins/navigate/navigate.vcproj
+++ b/trunk/sim/plugins/navigate/navigate.vcproj
@@ -17,7 +17,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="..\..\Release\plugins"
-			IntermediateDirectory="..\..\Release_Wrk"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -55,8 +55,8 @@
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\..\..\Release_Wrk/navigate.pch"
-				AssemblerListingLocation=".\..\..\Release_Wrk/"
+				PrecompiledHeaderFile=".\$(ConfigurationName)/navigate.pch"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
 				ObjectFile="Debug/"
 				ProgramDataBaseFileName="Debug/"
 				BrowseInformation="1"
@@ -116,7 +116,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="..\..\Debug"
-			IntermediateDirectory="..\..\Debug_Wrk"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -153,10 +153,10 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				PrecompiledHeaderFile=".\..\..\Debug_Wrk/navigate.pch"
-				AssemblerListingLocation=".\..\..\Debug_Wrk/"
-				ObjectFile=".\..\..\Debug_Wrk/"
-				ProgramDataBaseFileName=".\..\..\Debug_Wrk/"
+				PrecompiledHeaderFile=".\$(ConfigurationName)/navigate.pch"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
+				ObjectFile=".\$(ConfigurationName)/"
+				ProgramDataBaseFileName=".\$(ConfigurationName)/"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
