--- a/trunk/sim/plugins/remote/simext.vcproj
+++ b/trunk/sim/plugins/remote/simext.vcproj
@@ -18,7 +18,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="..\..\Release"
-			IntermediateDirectory="..\..\Release_Wrk"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -56,10 +56,10 @@
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\..\..\Release_Wrk/simext.pch"
-				AssemblerListingLocation=".\..\..\Release_Wrk/"
-				ObjectFile=".\..\..\Release_Wrk/"
-				ProgramDataBaseFileName=".\..\..\Release_Wrk/"
+				PrecompiledHeaderFile=".\$(ConfigurationName)/simext.pch"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
+				ObjectFile=".\$(ConfigurationName)/"
+				ProgramDataBaseFileName=".\$(ConfigurationName)/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 			/>
@@ -117,7 +117,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="..\..\Debug"
-			IntermediateDirectory="..\..\Debug_Wrk"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -150,10 +150,10 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\..\..\Debug_Wrk/simext.pch"
-				AssemblerListingLocation=".\..\..\Debug_Wrk/"
-				ObjectFile=".\..\..\Debug_Wrk/"
-				ProgramDataBaseFileName=".\..\..\Debug_Wrk/"
+				PrecompiledHeaderFile=".\$(ConfigurationName)/simext.pch"
+				AssemblerListingLocation=".\$(ConfigurationName)/"
+				ObjectFile=".\$(ConfigurationName)/"
+				ProgramDataBaseFileName=".\$(ConfigurationName)/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
