--- a/trunk/sim/plugins/styles/metal/metal.vcproj
+++ b/trunk/sim/plugins/styles/metal/metal.vcproj
@@ -17,7 +17,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="..\..\..\Debug"
-			IntermediateDirectory="..\..\..\Debug_Wrk"
+			IntermediateDirectory="..\$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
@@ -116,7 +116,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="..\..\..\Release"
-			IntermediateDirectory="..\..\..\Release_Wrk"
+			IntermediateDirectory="..\$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
