fix vcproj outdir fix pos initialization in userview.cpp

--- a/trunk/sim/plugins/autoaway/idleui.vcproj
+++ b/trunk/sim/plugins/autoaway/idleui.vcproj
@@ -115,7 +115,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="..\..\Release\plugins"
+			OutputDirectory="..\..\Release"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
