--- a/trunk/sim/plugins/ontop/configure.in.in
+++ b/trunk/sim/plugins/ontop/configure.in.in
@@ -1,4 +1,1 @@
-if test "$use_kde" != "yes" && test "$kde_use_qt_win" != "yes"; then
-  DO_NOT_COMPILE="$DO_NOT_COMPILE plugins/ontop"
-fi
-
+AM_CONDITIONAL(ENABLE_ONTOP, test "$use_kde" = "yes" || test "$kde_use_qt_win" = "yes")
