--- a/trunk/sim/plugins/transparent/configure.in.in
+++ b/trunk/sim/plugins/transparent/configure.in.in
@@ -10,7 +10,4 @@ fi
 if test "$kde_use_qt_win" = "yes"; then
   compile_plugin="yes"
 fi
-if test "x$compile_plugin" = "xno"; then
-  DO_NOT_COMPILE="$DO_NOT_COMPILE plugins/transparent"
-fi
-
+AM_CONDITIONAL(ENABLE_TRANSPARENT, test "x$compile_plugin" = "xyes")
