--- a/trunk/sim/plugins/icq/configure.in.in
+++ b/trunk/sim/plugins/icq/configure.in.in
@@ -1,6 +1,5 @@
-compile_plugin="no"
 if test "$have_ssl" != yes; then
   AC_MSG_WARN([OpenSSL library disabled. ICQ plugin is disabled])
-  DO_NOT_COMPILE="$DO_NOT_COMPILE plugins/icq"
 fi
+AM_CONDITIONAL(ENABLE_ICQ, test "$have_ssl" = "yes")
 
