--- a/trunk/sim/plugins/msn/configure.in.in
+++ b/trunk/sim/plugins/msn/configure.in.in
@@ -1,6 +1,5 @@
-compile_plugin="no"
 if test "$have_ssl" != yes; then
   AC_MSG_WARN([OpenSSL library disabled. MSN plugin is disabled])
-  DO_NOT_COMPILE="$DO_NOT_COMPILE plugins/msn"
 fi
 
+AM_CONDITIONAL(ENABLE_MSN, test "$have_ssl" = "yes")
