Added styles/wood and styles/metal to regular build process. (disable their compilation by default)

--- a/trunk/sim/configure.in.in
+++ b/trunk/sim/configure.in.in
@@ -166,3 +166,6 @@ if test "$kde_use_qt_win" = "yes"; then
 fi
 
 AM_CONDITIONAL(ENABLE_UPDATE, false)
+AM_CONDITIONAL(ENABLE_STYLES_WOOD, false)
+AM_CONDITIONAL(ENABLE_STYLES_METAL, false)
+
