update libltdl, fix compiling without system libltdl, compile bundled libltdl only if needed

--- a/trunk/sim/sim/libltdl/Makefile.am
+++ b/trunk/sim/sim/libltdl/Makefile.am
@@ -1,7 +1,11 @@
+if INSTALL_LTDL
 noinst_HEADERS = ltdl.h
 noinst_LTLIBRARIES = libltdl.la
+endif
 
 CLEANFILES = libltdl.la
 
 libltdl_la_SOURCES = ltdl.c
 libltdl_la_LIBADD = $(LIBADD_DL)
+
+AM_CFLAGS = -Wno-unused-parameter -Wno-sign-compare
